# a3md-utils

./: MANIFEST.in  README.md  setup.cfg
a3mdutils/: __init__.py  molecules.py  qm.py  utils.py  wfx.py
a3mdutils/parameters/: standard_charges.json
a3mdutils/scripts/: conformational.py  utils.py
scripts/: a3md.py  conformational.py  utils.py
test/: test_volume.py  test_wfx.py
