[metadata]
name = a3mdutils
version = 0.0.1
author = Bruno Cuevas
author_email = brunocuevaszuviria@gmail.com
description = Tools to deal with electron density
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = a3mdutils, a3mdutils.scripts
python_requires = >=3.6
install_requires =
    mendeleev==0.6.0
    scipy
    h5py==3.2.0
    click==8.0.1
include_package_data = True

[options.package_data]
    * = *.json
    a3mdutils = parameters/*.json

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    a3mdutils = a3mdutils.scripts.utils:cli
